Update Digits.java